test/scc/expr/semantic-errors/030.a
030.t:5:5: error: expression must have scalar type